random: Silence a warning for building rndjent by Clang.

* random/jitterentropy-base.c: Conditionalize by __OPTIMIZE__.

--

GnuPG-bug-id: 5369
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>